--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -5,33 +5,22 @@ ion-grid.desktop-view {
   ion-row {
     height: 100%;
     ion-col {
-      overflow-y: scroll;
+      overflow-y: auto;
       height: 100%;
     }
   }
 }
-ion-col {
+ion-col, ion-row, ion-grid, ion-content {
   background: var(--ion-color-light) !important;
 }
 
 .home-component {
-  // max-width: 320px !important;
   margin-left: calc(calc(1 / var(--ion-grid-columns, 12)) * 100%);
-  // margin-right: 16px;
+  max-width: 720px !important;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1440px) {
   .home-component {
     margin-left: 0 !important;
   }
-  .project-component {
-    margin-right: 0 !important;
-  }
-}
-
-.project-component {
-  // max-width: 524px !important;
-  margin-right: calc(calc(1 / var(--ion-grid-columns, 12)) * 100%);
-  // margin-right: 83px;
-  // margin-left: 16px;
 }
